--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+VUE_APP_SYSTEM_NAME=商派Onex官方商城标准版
 VUE_APP_IS_SAAS=false
 VUE_APP_PRODUCT_MODEL=platform
 VUE_APP_BASE_API=https://ecshopx1.shopex123.com/api
