--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VUE_APP_SYSTEM_NAME=商派Onex云店标准版
-VUE_APP_IS_SAAS=false
+VUE_APP_IS_SAAS=true
 VUE_APP_PRODUCT_MODEL=standard
 VUE_APP_BASE_API=https://ecshopx1.shopex123.com/api
 VUE_APP_PUBLIC_PATH=/
