--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,7 @@ VUE_APP_PREFIXES=
 VUE_APP_QIANKUN_ENTRY=/newpc/
 VUE_APP_OSS_CDN=true
 VUE_APP_FREE=false
+VUE_APP_ALIOSS_REGION=
+VUE_APP_ALIOSS_ACCESS_KEY_ID=
+VUE_APP_ALIOSS_ACCESS_KEY_SECRET=
+VUE_APP_ALIOSS_BUCKET=
