--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecshopx-admin",
-  "version": null,
+  "version": "3.20.1",
   "description": "ecshopx admin",
   "author": "shopex",
   "private": true,
