--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "repository": "https://git.ishopex.cn/ecshopx/ecshopx-admin.git",
   "scripts": {
     "build": "vue-cli-service build",
+    "build:yd": "vue-cli-service build --mode yd",
+    "build:bbc": "vue-cli-service build --mode bbc",
+    "build:sy": "vue-cli-service build --mode sy",
+    "build:ng": "vue-cli-service build --mode ng",
+    "build:b2c": "vue-cli-service build --mode b2c",
     "dev": "vue-cli-service serve",
+    "dev:yd": "vue-cli-service serve --mode yd",
+    "dev:bbc": "vue-cli-service serve --mode bbc",
+    "dev:sy": "vue-cli-service serve --mode sy",
+    "dev:ng": "vue-cli-service serve --mode ng",
+    "dev:b2c": "vue-cli-service serve --mode b2c",
     "sh": "node ./cli.js",
     "lint": "prettier-eslint --write --list-different 'src/**/*.{js,vue}'"
   },
@@ -43,8 +53,7 @@
     "vue-cropper": "^0.5.8",
     "vue-hotzone": "^1.1.0",
     "vue-html5-editor": "^1.1.1",
-    "vue-masonry": "^0.11.8",
-    "vue-router": "^2.3.1",
+    "vue-router": "^3.6.0",
     "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.5.1",
