--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,5 @@
 VUE_APP_IS_SAAS=false
-VUE_APP_SYSTEM_NAME=platform
-VUE_APP_PRODUCT_MODEL=platform
+VUE_APP_SYSTEM_NAME=Shopex Admin
 VUE_APP_BASE_API=https://ecshopx-shop.ex-sandbox.com/api
 VUE_APP_PUBLIC_PATH=/
 VUE_APP_WXIMG_URL=
