--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,11 @@
 {
+  "trailingComma": "none",
   "semi": false,
   "singleQuote": true,
+  "jsxSingleQuote": true,
+  "arrowParens": "always",
   "printWidth": 100,
   "tabWidth": 2,
-  "useTabs": false,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "quoteProps": "preserve",
   "endOfLine": "auto"
 }
