--- a/package.json
+++ b/package.json
@@ -82,11 +82,11 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "commitizen": "^4.3.0",
+    "commitlint-config-cz": "^0.13.3",
     "compression-webpack-plugin": "^11.1.0",
     "core-js": "^3.9.1",
     "css-minimizer-webpack-plugin": "^7.0.2",
-    "commitizen": "^4.3.0",
-    "commitlint-config-cz": "^0.13.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "dotenv-flow": "^3.2.0",
@@ -115,7 +115,8 @@
     "tailwindcss": "^3.4.17",
     "vue-template-compiler": "^2.6.10",
     "webpack-aliyun-oss": "^0.3.13",
-    "webpack-bundle-analyzer": "^4.4.0"
+    "webpack-bundle-analyzer": "^4.4.0",
+    "xlsx": "^0.18.5"
   },
   "engines": {
     "node": "16.16.0"
