chore(npm): 升级finder依赖

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ecshopx admin",
   "author": "shopex",
   "private": true,
-  "repository": "https://git.ishopex.cn/ecshopx/ecshopx-admin.git",
+  "repository": "https://github.com/shopeX-2002/ECShopX_management.git",
   "scripts": {
     "build:yd": "PLATFORM=yd vue-cli-service build",
     "build:bbc": "PLATFORM=bbc vue-cli-service build",
@@ -31,7 +31,7 @@
     "@antv/g2plot": "^2.4.31",
     "@icon-park/vue": "^1.4.2",
     "@riophae/vue-treeselect": "0.0.38",
-    "@shopex/finder": "^1.0.74",
+    "@shopex-ui/finder": "^1.0.76",
     "ali-oss": "^6.5.1",
     "axios": "^0.19.2",
     "big": "^0.5.2",
@@ -82,11 +82,11 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "commitizen": "^4.3.0",
+    "commitlint-config-cz": "^0.13.3",
     "compression-webpack-plugin": "^11.1.0",
     "core-js": "^3.9.1",
     "css-minimizer-webpack-plugin": "^7.0.2",
-    "commitizen": "^4.3.0",
-    "commitlint-config-cz": "^0.13.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "dotenv-flow": "^3.2.0",
