--- a/.npmrc
+++ b/.npmrc
@@ -2,5 +2,4 @@
 # 默认使用淘宝镜像
 registry=https://registry.npmmirror.com
 
-# 特定包使用私有仓库
-xmlhttprequest:registry=http://registry.npm.ishopex.cn
+@shopex-ui:registry=https://registry.npmjs.org/
